Automatitza actualització de dades amb npm script i documenta el procés
- Script Python ara copia JSON a public/ i src/assets/
- Nou script npm: 'npm run update-data' per executar conversió
- Documentació actualitzada a README_MUIXERANGA.md amb format Excel
- Instruccions ràpides actualitzades amb mètode fàcil d'actualització
- Actualitzades dades: 71 membres (32 Muixelovers, 16 Talents, 15 Comboiet, 8 FOMO)

--- a/barret-magic/package.json
+++ b/barret-magic/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "update-data": "../venv/bin/python convert_excel.py"
   },
   "prettier": {
     "printWidth": 100,
