Production href test

--- a/barret-magic/angular.json
+++ b/barret-magic/angular.json
@@ -36,6 +36,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/MuixeDinarNadal2025/",
               "budgets": [
                 {
                   "type": "initial",
